# people

people_follower/: CMakeLists.txt  package.xml
people_follower/cfg/: PeopleFollower.cfg
people_follower/launch/: realsense_R200.launch
people_follower/src/: people_follower_node.cpp
