<package>
  <name>people_follower</name>
  <version>1.0.10</version>
  <description>
  A collection of node to make your robot following detected people
  </description>
  <author>Alessandro Francescon</author>
  <maintainer email="alessandro.francescon@gmail.com">Alessandro Francescon</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>


